@@ -148,8 +148,8 @@ class DebridCheck:
                 self.main_threads.append(Thread(target=self.starting_debrids[i][1]))
                 self.starting_debrids_display.append((self.main_threads[i].getName(), self.starting_debrids[i][0]))
             [i.start() for i in self.main_threads]
-            [i.join() for i in self.main_threads]
             self.debrid_check_dialog()
+            [i.join() for i in self.main_threads]
         control.sleep(500)
         return self.rd_cached_hashes, self.ad_cached_hashes, self.pm_cached_hashes
 
@@ -158,7 +158,8 @@ class DebridCheck:
         progressDialog.create('Checking debrid cache, please wait..')
         #progressDialog.update(0)
         start_time = time.time()
-        for i in list(range(0, 200)):
+        end_time = start_time + timeout
+        while not progressDialog.isFinished():
             try:
                 if control.monitor.abortRequested(): return sys.exit()
                 alive_threads = [x.getName() for x in self.main_threads if x.is_alive() is True]
@@ -170,8 +171,9 @@ class DebridCheck:
                     msg = 'Remaining Debrid Checks: %s' % ', '.join(remaining_debrids).upper()
                     progressDialog.update(percent, message=msg)
                 except: pass
-                time.sleep(0.2)
-                if len(alive_threads) == 0 or progressDialog.isFinished(): break
+                time.sleep(0.1)
+                if len(alive_threads) == 0: break
+                if current_time > end_time: break
             except Exception:
                 pass
         try:
